changed to /beer

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -8,8 +8,8 @@
 
 
   <!-- Pets Tab -->
-  <ion-tab title="Home" icon="icon ion-home" href="#/tab/pets">
-    <ion-nav-view name="pets-tab"></ion-nav-view>
+  <ion-tab title="Home" icon="icon ion-home" href="#/tab/beers">
+    <ion-nav-view name="beers-tab"></ion-nav-view>
   </ion-tab>
 
 
